@@ -2605,6 +2605,11 @@ display the model data with an appropriate CellRenderer. For instance,
 strings and
 numbers are shown in a simple Gtk::Entry widget, and booleans are
 shown in a Gtk::CheckButton. This is usually what you need.  
+For other column types you have to install a callback that converts
+your type into a string representation with
+TreeViewColumn::set_cell_data_func() or derive a custom CellRenderer.
+Note that (unsigned) short is not supported by default - use
+(unsigned) int or (unsigned) long as column type instead!
 </para>
 </sect2>
 
