@@ -106,7 +106,18 @@ public:
 
   _WRAP_METHOD(int append_column(TreeViewColumn& column), gtk_tree_view_append_column)
 
-  /// Appends a View column with the appropriate CellRenderer for the Model column.
+  /** Appends a View column with the appropriate CellRenderer for the Model column.
+   * The CellRenderer can only be created automatically for some basic
+   * column types, such as Glib::ustring, int, bool, Gdk::Pixbuf. Also,
+   * the default CellRenderer might not be setup exactly as needed.
+   * You might prefer to create the TreeViewColumn and or CellRenderer
+   * manually. You might provide a callback that converts the type into a
+   * string representation with TreeViewColumn::set_cell_data_func().
+   * Otherwise, if the type is not supported, at run-time no text will
+   * appear in the column while the following warning is generated repeatedly:
+   * GLib-GObject-WARNING **: unable to set property `text' of type
+   * `gchararray' from value of type `glibmm__CustomBoxed_t'
+   */
   template <class ColumnType> inline
   int append_column(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column);
 
