@@ -1,3 +1,10 @@
+2003-08-11  Martin Schulze  <teebaum@cvs.gnome.org>
+
+	* gtk/src/treeview.hg, docs/tutorial/gtkmm-tut.xml:
+	Add information about what to do when the column type is not
+	supported and TreeView::append_column() sets up the CellRenderer
+	incompletely (bug #118922).
+
 2003-07-21  Murray Cumming  <murrayc@usa.net>
  
  	* src/gtk/buttonbox.hg: Documentation: Corrected the switched 
